--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,11 +22,13 @@ theme:
       accent: green
   
 markdown_extensions:
+  - tables
+  - admonition
+  - pymdownx.details
+  - pymdownx.superfences
   - attr_list
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
-
-remote_branch: gh-pages
 
 copyright: Copyright &copy; 2025 Simo Roikonen
